workspace2/.metadata/.plugins/org.eclipse.cdt.ui/1.3.build.log
17:48:51 **** Incremental Build of configuration Debug for project 1.3 ****
Info: Internal Builder is used for build
g++ -std=c++1y "-IC:\\Users\\Eu\\workspace2\\1.3\\cute" "-IC:\\Users\\Eu\\workspace2\\1.3\\boost" -O0 -g3 -Wall -c -fmessage-length=0 -Wno-attributes -o "src\\veterinario.o" "..\\src\\veterinario.cpp" 
..\src\veterinario.cpp: In constructor 'Veterinario::Veterinario()':
..\src\veterinario.cpp:6:19: warning: converting to non-pointer type 'long int' from NULL [-Wconversion-null]
  this->codOrdem = NULL;
                   ^~~~
..\src\veterinario.cpp: In member function 'std::__cxx11::string Veterinario::getInformacao() const':
..\src\veterinario.cpp:19:15: error: aggregate 'std::stringstream ss' has incomplete type and cannot be defined
  stringstream ss;
               ^~

17:48:52 Build Finished (took 1s.80ms)

